Now initial tag is random tag instead of just true. This allows multiple ec2 instances to be spinned up simultaneously and same instance not being picked up by multiple inspector runs simulatenously.

--- a/setup-cfn.yaml
+++ b/setup-cfn.yaml
@@ -1,4 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
+Description: Generate resources that allow every ec2 to be inspected by inspector upon launch.
 Parameters:
   TOPICARN:
     Type: String
